--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,12 @@ html,
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #efecea;
 }
 
 text {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   fill: #635f5d;
